--- a/_i18n/de.yml
+++ b/_i18n/de.yml
@@ -16,6 +16,7 @@ home:
   description: Alles rund um Blockchain
   headline: Themen rund um Blockchain, einfach erklärt
   current_articles: Aktuelle Artikel
+  important_articles: Die Grundlagen
   view_articles: Alle Artikel ansehen
   new_idea: Du hast Ideen für neue Artikel?
   message: Wir freuen uns auf deine Nachricht!
