--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -16,6 +16,7 @@ home:
   description: Everything around Blockchain
   headline: Everything around Blockchain, easy explained
   current_articles: New articles
+  important_articles: The basics
   view_articles: Show all articles
   new_idea: You got an idea for a new article?
   message: We would love to hear from you!
