--- a/_i18n/de.yml
+++ b/_i18n/de.yml
@@ -13,7 +13,7 @@ footer:
   privacy: Datenschutz
 home:
   title: Blockchain-Informationen einfach erklärt
-  description: Alles rund um Blockchain
+  description: Alles rund um Blockchains
   headline: Themen rund um Blockchain, einfach erklärt
   current_articles: Aktuelle Artikel
   important_articles: Die Grundlagen
