--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -13,7 +13,7 @@ footer:
   privacy: Privacy
 home:
   title: Blockchain-Informations explained simple
-  description: Everything around Blockchain
+  description: Everything around Blockchains
   headline: Everything around Blockchain, easy explained
   current_articles: New articles
   important_articles: The basics
